--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
 
     //picasso if performance low -> https://github.com/hkk595/Resizer or https://github.com/jeziellago/image-minifier
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
